--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
-   <!-- <div class="modal">
+   <div class="modal">
     <div class="modal-content">
       <div class="flex">
         <div class="modal-image cell">
           <img src="./images/illustration-thank-you.svg" alt="thanks-illustration">
         </div>
         <div class="final-rate cell">
-          <div class="out-of"> -->
+          <div class="out-of">
          <!--  <span>You selected 4 out of 5</span> -->
- <!--          </div>
+          </div>
   <div class="thanking cell">
     <h2> Thank you!</h2>
     <p>We appreciate you taking the time to give a rating. If you ever need more support, 
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
  
  
 
@@ -87,7 +87,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Naglaa Raslan</a>.
   </div>
 </body>
 </html>
